# hipscript

./: .gitignore  .gitmodules  README.md  build.sh  wasix_toolchain.cmake  wasmer.toml
clspv/: AllocateDescriptorsPass.cpp  CMakeLists.txt  Compiler.cpp  LongVectorLoweringPass.cpp  PrintfPass.cpp  ReplaceLLVMIntrinsicsPass.cpp  ReplaceOpenCLBuiltinPass.cpp  SPIRVProducerPass.cpp  Types.cpp
clspv/cmake/: CMakeLists.txt
clspv/reflection/: CMakeLists.txt  ReflectionParser.cpp  main.cpp
clspv/tools/: CMakeLists.txt
emcc/: .env  .gitignore  README.md  compile_flags.txt  data.json  emscripten_worker.ts  index.html  index.js  package.json  serve.json  tailwind.config.ts  vite.config.ts
emcc/src/: app.css  app.html
emcc/src/lib/: Monaco.svelte  RunControl.svelte  compiler.worker.ts  downloadFile.ts  hi.hip  llvm_manifest.json  run.ts  types.d.ts  wasmer.ts  wasmer.worker.js
emcc/src/lib/samples/: .clang-format  00Game Of Life.hip  01Tour.hip  02Hello World.hip  Game Of Life.hip  Tour.hip
emcc/src/lib/wasm/: Makefile  die.js  em.cpp  errors.cpp  foo.js  impl.hpp  printf.cpp  printf.hpp  twgsl.js  webgpu.js
emcc/src/routes/: +page.svelte
emcc/src/routes/404/: +page.svelte
emcc/static/: _headers
hip/include/: chipStarConfig.hh  cuspv
hip/include/cuspv/: cuda_runtime.h
hip/include/hip/: hip_version.h
hip/lib/hip-device-lib/: hipspv-spirv32.bc  hipspv-spirv32.ll
polyfill/sys/: statvfs.h
